finish ch 3 full with ex & adv

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,17 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
+# Ignore the default SQLite database.
+/db/*.sqlite3
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore other unneeded files.
+doc/
+*.swp
+*~
+.project
+.DS_Store
+bundler_stubs/
